--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "devDependencies": {
     "@iconify/json": "^2.2.21",
+    "@types/d3-array": "^3.0.4",
+    "@types/d3-selection": "^3.0.4",
     "@unocss/preset-attributify": "^0.49.4",
     "@unocss/preset-icons": "^0.49.4",
     "@unocss/preset-uno": "^0.49.4",
@@ -33,6 +35,12 @@
     }
   },
   "dependencies": {
+    "@observablehq/plot": "^0.6.3",
+    "@vueuse/core": "^9.12.0",
+    "d3-array": "^3.2.2",
+    "d3-format": "^3.1.0",
+    "d3-selection": "^3.0.0",
+    "pinia": "^2.0.30",
     "vue": "^3.2.47"
   }
 }
