--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "devDependencies": {
     "@iconify/json": "^2.2.21",
     "@types/d3-array": "^3.0.4",
+    "@types/d3-color": "^3.1.0",
+    "@types/d3-format": "^3.0.1",
+    "@types/d3-interpolate": "^3.0.1",
     "@types/d3-selection": "^3.0.4",
+    "@types/three": "^0.149.0",
     "@unocss/preset-attributify": "^0.49.4",
     "@unocss/preset-icons": "^0.49.4",
     "@unocss/preset-uno": "^0.49.4",
@@ -38,9 +42,12 @@
     "@observablehq/plot": "^0.6.3",
     "@vueuse/core": "^9.12.0",
     "d3-array": "^3.2.2",
+    "d3-color": "^3.1.0",
     "d3-format": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
     "d3-selection": "^3.0.0",
     "pinia": "^2.0.30",
+    "three": "^0.149.0",
     "vue": "^3.2.47"
   }
 }
